fix author img stretching

--- a/src/TrueOrFalse.Frontend.Web/Views/Categories/Detail/Category.less
+++ b/src/TrueOrFalse.Frontend.Web/Views/Categories/Detail/Category.less
@@ -879,6 +879,7 @@ p:empty {
                 border-radius: 50%;
                 height: 20px;
                 width: 20px;
+                object-fit: cover;
             }
 
             .author-listitem {
